--- a/ci-cd/examples/front-workflow.yaml
+++ b/ci-cd/examples/front-workflow.yaml
@@ -14,3 +14,5 @@ jobs:
       app_version: "${{ github.ref_name || 'v0.0.0' }}-${{ github.sha.slice(0, 7) }}"
       engine_type: 'node'
       engine_version: '14'
+    secrets:
+      GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
