--- a/.github/workflows/app-ci-cd.yaml
+++ b/.github/workflows/app-ci-cd.yaml
@@ -43,8 +43,7 @@ jobs:
           sudo mv confd-0.16.0-linux-amd64 /usr/local/bin/confd
           confd -onetime \
                 -backend env \
-                -confdir infra-repo/ci-cd/confd \
-                -config-file infra-repo/ci-cd/confd/conf.d/Dockerfile-${{ inputs.engine_type }}.toml
+                -confdir infra-repo/ci-cd/confd/${{ inputs.engine_type }}
           mv /tmp/Dockerfile /app-repo/Dockerfile
       
       - name: Build and push Docker image to GHCR
