--- a/.github/workflows/app-ci-cd.yaml
+++ b/.github/workflows/app-ci-cd.yaml
@@ -60,8 +60,8 @@ jobs:
           docker build \
             --build-arg SKIP_TESTS=true \
             -t ghcr.io/ptarasyuk/greencityinfra/${{ inputs.app_name }}:$APP_VERSION \
-            -f ./infra-repo/Dockerfile \
-            ./infra-repo
+            -f ./app-repo/Dockerfile \
+            ./app-repo
 
       - name: Push Docker image to GHCR
         run: |
