--- a/ci-cd/workflows/main.yaml
+++ b/ci-cd/workflows/main.yaml
@@ -6,9 +6,6 @@ on:
       app_name:
         required: true
         type: string
-      app_version:
-        required: true
-        type: string
       engine_type: # java or node
         required: true
         type: string
@@ -18,7 +15,6 @@ on:
     secrets:
       GHCR_TOKEN:
         required: true
-        type: string
 
 jobs:
   build-and-dockerize:
@@ -35,6 +31,18 @@ jobs:
           repository: 'PTarasyuk/GreenCityInfra'
           path: 'infra-repo'
 
+      - name: Get App Version
+        run: |
+          git -C app-repo fetch --tags
+          TAG=$(git -C ./app-repo tag | sort -V | tail -n 1)
+          if [ -z "$TAG" ]; then
+            TAG="v0.0.0"
+          fi
+          SHORT_SHA=$(git -C ./app-repo rev-parse --short HEAD)
+          APP_VERSION=${TAG}-${SHORT_SHA}
+          echo "APP_VERSION: ${APP_VERSION}"
+          echo "APP_VERSION=${APP_VERSION}" >> $GITHUB_ENV
+
       - name: Render Dockerfile
         env:
           ENGINE_VERSION: ${{ inputs.engine_version }}
@@ -44,18 +52,20 @@ jobs:
           sudo mv confd-0.16.0-linux-amd64 /usr/local/bin/confd
           confd -onetime \
                 -backend env \
-                -confdir infra-repo/ci-cd/confd \
-                -config-file infra-repo/ci-cd/confd/conf.d/Dockerfile-${{ inputs.engine_type }}.toml
-          mv /tmp/Dockerfile /app-repo/Dockerfile
+                -confdir infra-repo/ci-cd/confd/${{ inputs.engine_type }}
+          mv /tmp/Dockerfile ./app-repo/Dockerfile
+
+      - name: Login to GHCR
+        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       
-      - name: Build and push Docker image to GHCR
-        uses: docker/build-push-action@v5
-        with:
-          context: ./infra-repo
-          file: ./infra-repo/Dockerfile
-          build-args: |
-            SKIP_TESTS: true
-          registry: ghcr.io
-          image: PTarasyuk/GreenCityInfra/${{ inputs.app_name }}:${{ inputs.app_version }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_TOKEN }}
+      - name: Build Docker image
+        run: |
+          docker build \
+            --build-arg SKIP_TESTS=true \
+            -t ghcr.io/ptarasyuk/greencityinfra/${{ inputs.app_name }}:$APP_VERSION \
+            -f ./app-repo/Dockerfile \
+            ./app-repo
+
+      - name: Push Docker image to GHCR
+        run: |
+          docker push ghcr.io/ptarasyuk/greencityinfra/${{ inputs.app_name }}:$APP_VERSION
