✅ fix(workflow): update helm e2e test script for sealed-secrets-controller
Update the helm-e2e-test workflow to correct the kubectl wait command for better reliability.
Change the wait condition from checking for pods to checking for the deployment
availability of the sealed-secrets-controller. This resolves the earlier TODO regarding
the error of no matching resources found, ensuring more precise resource management
in the test environment.

--- a/.github/workflows/helm-e2e-test.yaml
+++ b/.github/workflows/helm-e2e-test.yaml
@@ -83,10 +83,8 @@ jobs:
           helm install sealed-secrets sealed-secrets/sealed-secrets \
             --namespace kube-system \
             --set-string fullnameOverride=sealed-secrets-controller
-          # TODO: Fix error: no matching resources found
           kubectl wait --namespace kube-system \
-            --for=condition=ready pod \
-            --selector=app.kubernetes.io/name=sealed-secrets-controller \
+            --for=condition=available deployment/sealed-secrets-controller \
             --timeout=180s
 
       - name: Install kubeseal tools
