👷 ci(helm-e2e-test): remove leading slash from helm chart paths
Modified the Helm chart installation commands in the `helm-e2e-test` workflow by removing leading slashes from the chart paths. This ensures the paths are relative and consistent throughout the deployment process for the `core`, `user`, and `front` services. This change improves the flexibility of the workflow by supporting dynamic directory structures and avoids potential issues with absolute path dependencies in different environments.

--- a/.github/workflows/helm-e2e-test.yaml
+++ b/.github/workflows/helm-e2e-test.yaml
@@ -129,7 +129,7 @@ jobs:
         run: |
           helm install core \
             --namespace greencity \
-            /helm/core/
+            helm/core/
 
           # Wait for the core to be ready
           kubectl wait --namespace greencity \
@@ -141,7 +141,7 @@ jobs:
         run: |
           helm install user \
             --namespace greencity \
-            /helm/user/
+            helm/user/
 
           # Wait for the user to be ready
           kubectl wait --namespace greencity \
@@ -153,7 +153,7 @@ jobs:
         run: |
           helm install front \
             --namespace greencity \
-            /helm/front/
+            helm/front/
 
           # Wait for the front to be ready
           kubectl wait --namespace greencity \
