👷 ci(helm-e2e-test): update cypress action configuration
Simplified the npm command used for starting tests and set the `working-directory` to `e2e` within the cypress GitHub action. This change enhances the setup by ensuring the command is executed in the correct directory, improving the clarity and maintainability of the workflow file. The use of a more concise test start command aligns with best practices for workflow configurations.

--- a/.github/workflows/helm-e2e-test.yaml
+++ b/.github/workflows/helm-e2e-test.yaml
@@ -178,8 +178,9 @@ jobs:
         id: cypress
         uses: cypress-io/github-action@v6
         with:
-          start: npm --prefix e2e test
+          start: npm test
           record: true
+          working-directory: e2e
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
