--- a/.github/workflows/helm-e2e-test.yaml
+++ b/.github/workflows/helm-e2e-test.yaml
@@ -179,7 +179,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           start: npm test
-          record: true
+          record: false
           working-directory: e2e
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
