--- a/.github/workflows/app-ci-cd.yaml
+++ b/.github/workflows/app-ci-cd.yaml
@@ -23,13 +23,13 @@ jobs:
       - name: Checkout app repo
         uses: actions/checkout@v4
         with:
-          path: 'app-repo'
+          path: app-repo
 
       - name: Checkout infrastructure repo
         uses: actions/checkout@v4
         with:
           repository: 'PTarasyuk/GreenCityInfra'
-          path: 'infra-repo'
+          path: infra-repo
 
       - name: Get App Version
         run: |
@@ -69,3 +69,32 @@ jobs:
       - name: Push Docker image to GHCR
         run: |
           docker push ghcr.io/ptarasyuk/greencityinfra/${{ inputs.app_name }}:$APP_VERSION
+
+      - name: Update `image.tag` in `values.yaml`
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq -i '.image.tag=strenv(APP_VERSION)' infra-repo/helm/${{ inputs.app_name }}/values.yaml
+
+      - name: Create PR to infrastructure repository
+        uses: peter-evans/create-pull-request@v7
+        with:
+          token: ${{ secrets.GHCR_TOKEN }}
+          path: infra-repo
+          base: main
+          branch: ${{ inputs.app_name }}-$APP_VERSION
+          branch-suffix: ${{ github.run_id }}
+          commit-message: '✨ feat(${{ inputs.app_name }}): new version $APP_VERSION'
+          committer: 'github-actions[bot]@users.noreply.github.com'
+          author: 'github-actions[bot]'
+          delete-branch: true
+          title: '✨ New version!'
+          body: |
+            # New version of the `${{ inputs.app_name }}` application `$APP_VERSION`!
+
+            ## Description
+
+            This PR updates the `${{ inputs.app_name }}` application to version `$APP_VERSION`.
+
+            ## Changes
+
+            - Changed the value of the `image.tag` variable in `helm/${{ inputs.app_name }}/values.yaml` to `$APP_VERSION`
