🔒 fix(workflows): correct variable syntax and add token in workflows
Corrected the variable interpolation syntax in app-ci-cd.yaml to consistently use `${}` for environment variables, ensuring proper parsing and functionality. Additionally, added the `token` parameter with `${{ secrets.GITHUB_TOKEN }}` in helm-e2e-test.yaml to facilitate authentication for posting comments on PRs, improving security and workflow execution reliability.

--- a/.github/workflows/app-ci-cd.yaml
+++ b/.github/workflows/app-ci-cd.yaml
@@ -81,17 +81,17 @@ jobs:
           token: ${{ secrets.GHCR_TOKEN }}
           path: infra-repo
           base: main
-          branch: ${{ inputs.app_name }}-$APP_VERSION
-          commit-message: '✨ feat(${{ inputs.app_name }}): new version $APP_VERSION'
+          branch: ${{ inputs.app_name }}-${APP_VERSION}
+          commit-message: '✨ feat(${{ inputs.app_name }}): new version ${APP_VERSION}'
           delete-branch: true
           title: '✨ New version!'
           body: |
-            # New version of the `${{ inputs.app_name }}` application `$APP_VERSION`!
+            # New version of the `${{ inputs.app_name }}` application `${APP_VERSION}`!
 
             ## Description
 
-            This PR updates the `${{ inputs.app_name }}` application to version `$APP_VERSION`.
+            This PR updates the `${{ inputs.app_name }}` application to version `${APP_VERSION}`.
 
             ## Changes
 
-            - Changed the value of the `image.tag` variable in `helm/${{ inputs.app_name }}/values.yaml` to `$APP_VERSION`
+            - Changed the value of the `image.tag` variable in `helm/${{ inputs.app_name }}/values.yaml` to `${APP_VERSION}`
