💚 fix(ci): correct placeholder for APP_VERSION in commit message
Corrected the placeholder for APP_VERSION in the commit-message within the GitHub Actions workflow to ensure it dynamically uses the environment variable properly. This addresses a potential issue where the application version was not being referenced correctly, ensuring more accurate commit history in the infrastructure repository.

--- a/.github/workflows/app-ci-cd.yaml
+++ b/.github/workflows/app-ci-cd.yaml
@@ -84,7 +84,7 @@ jobs:
           path: infra-repo
           base: main
           branch: ${{ inputs.app_name }}-${{ env.APP_VERSION }}
-          commit-message: '✨ feat(${{ inputs.app_name }}): new version ${APP_VERSION}'
+          commit-message: '✨ feat(${{ inputs.app_name }}): new version ${{ env.APP_VERSION }}'
           delete-branch: true
           title: '✨ New version!'
           body: |
