🔧 feat(helm): update ingress configuration for Helm installation
Added explicit ingress class and annotations configuration to the Helm chart installation in the Helm E2E test workflow. This change sets `ingress.className` and `ingress.annotations."kubernetes.io/ingress.class"` to "nginx" during the installation, ensuring that the appropriate ingress controller is used. Additionally, commented out `kubernetes.io/ingress.class` in `values.yaml` to prevent default values from conflicting during deployment. This update aims to improve ingress handling by providing clear and precise controller specification, enhancing the deployment process.

--- a/.github/workflows/helm-e2e-test.yaml
+++ b/.github/workflows/helm-e2e-test.yaml
@@ -152,6 +152,8 @@ jobs:
       - name: Install Front
         run: |
           helm install front \
+            --set ingress.className=nginx \
+            --set ingress.annotations."kubernetes\.io/ingress\.class"="nginx" \
             --namespace greencity \
             helm/front/
 
