--- a/helm/front/values.yaml
+++ b/helm/front/values.yaml
@@ -56,8 +56,9 @@ ingress:
   enabled: true
   className: ""
   annotations:
-    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+    # alb.ingress.kubernetes.io/scheme: "internet-facing"
   hosts:
     - host: localhost
       paths:
